<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:background="@color/transparent">
    
    <ImageView 
        android:id="@+id/id_loading_video_ad"
        android:layout_width="1280dp"
        android:layout_height="720dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:scaleType="fitXY"
        android:visibility="visible"
        android:src="@drawable/loading_ad_d"
        android:contentDescription="@string/app_name"/>
    
    <TextView 
        android:id="@+id/id_loading_video_countdown"
 		android:layout_width="80dp"
 		android:layout_height="40dp"
 		android:layout_marginLeft="1176dp"
 		android:layout_marginTop="24dp"
 		android:gravity="center"
 		android:textSize="@dimen/font_25"
 		android:textColor="@color/white"
 		android:singleLine="true"
 		android:ellipsize="end"
 		android:visibility="visible"
 		android:text=""
 		android:background="@drawable/loading_countdown_bg"/>
    
    <RelativeLayout
        android:id="@+id/id_loading_video"
        android:layout_width="1280dp"
        android:layout_height="114dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="606dp"
        android:visibility="visible"
        android:background="@drawable/loading_video_bg">
        
        <com.szgvtv.ead.app.taijietemplates.ui.view.ImageRotation
        	android:id="@+id/id_loading_video_icon"
        	android:layout_width="68dp"
        	android:layout_height="68dp"
        	android:layout_marginLeft="502dp"
        	android:layout_marginTop="23dp"
        	android:src="@drawable/waitting_small" >
    	</com.szgvtv.ead.app.taijietemplates.ui.view.ImageRotation>
    	
        <RelativeLayout
        	android:id="@+id/id_loading_video_info"
        	android:layout_width="wrap_content"
        	android:layout_height="114dp"
        	android:layout_toRightOf="@+id/id_loading_video_icon"
        	android:layout_marginLeft="10dp"
        	android:layout_marginTop="0dp"
        	android:visibility="visible"
        	android:gravity="center_vertical">
        	
            <TextView 
        		android:id="@+id/id_loading_video_name"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_marginLeft="0dp"
 				android:layout_marginTop="0dp"
 				android:gravity="left"
 				android:textSize="@dimen/font_20"
 				android:textColor="@color/white"
 				android:singleLine="true"
 				android:ellipsize="end"
 				android:visibility="visible"
 				android:text="@string/loading_video"/>
    	
    		<TextView 
        		android:id="@+id/id_loading_video_buffer"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_below="@+id/id_loading_video_name"
 				android:layout_alignLeft="@+id/id_loading_video_name"
 				android:layout_marginLeft="0dp"
 				android:layout_marginTop="5dp"
 				android:gravity="left"
 				android:textSize="@dimen/font_23"
 				android:textColor="@color/white"
 				android:singleLine="true"
 				android:ellipsize="end"
 				android:visibility="visible"
 				android:text="@string/loading_video_buffer"/>
    	
    		<TextView 
        		android:id="@+id/id_loading_video_speed"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_alignTop="@+id/id_loading_video_buffer"
 				android:layout_toRightOf="@+id/id_loading_video_buffer"
 				android:layout_marginLeft="20dp"
 				android:layout_marginTop="0dp"
 				android:gravity="left"
 				android:textSize="@dimen/font_23"
 				android:textColor="@color/white"
 				android:singleLine="true"
 				android:ellipsize="end"
 				android:visibility="visible"
 				android:text=""/>
        
        </RelativeLayout>
        
    </RelativeLayout>

</RelativeLayout>