<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="520dp" 
    android:layout_height="635dp"
    android:background="@drawable/live_channel_bg">
    
    <RelativeLayout
        android:id="@+id/id_live_channel"
        android:layout_width="270dp"
        android:layout_height="635dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp">
        
        <TextView 
       		android:id="@+id/id_live_channel_name"
 			android:layout_width="255dp"
 			android:layout_height="53dp"
 			android:layout_marginLeft="0dp"
 			android:textSize="@dimen/font_25"
 			android:textColor="@color/white"
 			android:gravity="center"
 			android:singleLine="true"
 			android:ellipsize="end"
 			android:visibility="visible"
 			android:text="@string/live_channel_list"/>
        
        <ListView 
            android:id="@+id/id_live_channel_list" 
            android:layout_width="272dp"   
            android:layout_height="530dp" 
            android:layout_below="@+id/id_live_channel_name"
            android:layout_marginLeft="0dp" 
            android:layout_marginTop="0dp" 
            android:focusable="true"
            android:listSelector="@drawable/live_channel_focus" 
			android:divider="@color/transparent"
			android:dividerHeight="1dp"
			android:scrollbars="none"
			android:visibility="visible"/>  
        
        <TextView 
       		android:id="@+id/id_live_channel_total"
 			android:layout_width="140dp"
 			android:layout_height="53dp"
 			android:layout_below="@+id/id_live_channel_list"
 			android:layout_marginLeft="20dp"
 			android:layout_marginTop="0dp" 
 			android:textSize="@dimen/font_18"
 			android:textColor="@color/white"
 			android:gravity="left|center_vertical"
 			android:singleLine="true"
 			android:ellipsize="end"
 			android:visibility="visible"
 			android:text=""/>
        
        <TextView 
       		android:id="@+id/id_live_channel_page"
 			android:layout_width="70dp"
 			android:layout_height="53dp"
 			android:layout_toRightOf="@+id/id_live_channel_total"
 			android:layout_alignTop="@+id/id_live_channel_total"
 			android:layout_alignBottom="@+id/id_live_channel_total"
 			android:layout_marginLeft="10dp"
 			android:textSize="@dimen/font_18"
 			android:textColor="@color/white"
 			android:gravity="center"
 			android:singleLine="true"
 			android:ellipsize="end"
 			android:visibility="visible"
 			android:text=""/>
        
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/id_live_channel_preview"
        android:layout_width="255dp"
        android:layout_height="635dp"
        android:layout_toRightOf="@+id/id_live_channel"
        android:layout_alignTop="@+id/id_live_channel"
        android:layout_alignBottom="@+id/id_live_channel"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="0dp">
        
        <TextView 
       		android:id="@+id/id_live_channel_playing"
 			android:layout_width="255dp"
 			android:layout_height="53dp"
 			android:layout_marginLeft="00dp"
 			android:layout_marginTop="0dp" 
 			android:paddingLeft="5dp"
 			android:textSize="@dimen/font_23"
 			android:textColor="@color/white"
 			android:gravity="left|center_vertical"
 			android:singleLine="true"
 			android:ellipsize="end"
 			android:visibility="visible"
 			android:text="@string/live_playing"/>
        
        <TextView 
       		android:id="@+id/id_live_channel_playing_program"
 			android:layout_width="255dp"
 			android:layout_height="53dp"
 			android:layout_below="@+id/id_live_channel_playing"
 			android:layout_marginLeft="00dp"
 			android:layout_marginTop="0dp" 
 			android:paddingLeft="5dp"
 			android:paddingRight="5dp"
 			android:textSize="@dimen/font_23"
 			android:textColor="@color/white"
 			android:gravity="left|center_vertical"
 			android:singleLine="true"
 			android:ellipsize="end"
 			android:visibility="visible"
 			android:text=""/>
        
        <TextView 
       		android:id="@+id/id_live_channel_upcoming"
 			android:layout_width="wrap_content"
 			android:layout_height="53dp"
 			android:layout_below="@+id/id_live_channel_playing_program"
 			android:layout_marginLeft="0dp"
 			android:layout_marginTop="0dp" 
 			android:paddingLeft="5dp"
 			android:textSize="@dimen/font_23"
 			android:textColor="@color/dark_white"
 			android:gravity="left|center_vertical"
 			android:singleLine="true"
 			android:ellipsize="end"
 			android:visibility="visible"
 			android:text="@string/live_goto_play"/>
        
        <ListView 
            android:id="@+id/id_live_channel_upcoming_program" 
            android:layout_width="255dp"   
            android:layout_height="530dp" 
            android:layout_below="@+id/id_live_channel_upcoming"
            android:layout_marginLeft="0dp" 
            android:layout_marginTop="0dp" 
            android:divider="@color/transparent"
            android:dividerHeight="1dp"
            android:focusable="false"
            android:scrollbars="none"/>  
        
    </RelativeLayout>

</RelativeLayout>
